salesforce-metadata/force-app/main/default/objects/Flow_Test_Run_Record__c/Flow_Test_Run_Record__c.object-meta.xml
<CustomObject>
    <label>Flow Test Run Record</label>
    <pluralLabel>Flow Test Run Records</pluralLabel>
    <nameField>
        <displayFormat>REC-{0000}</displayFormat>
        <label>Flow Test Run Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>