salesforce-metadata/force-app/main/default/objects/Flow_Test_Run_Record__c/fields/Field_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Field_Snapshot__c</fullName>
    <label>Field Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>