salesforce-metadata/force-app/main/default/objects/Flow_Test_Run_Record__c/fields/Flow_Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Flow_Test_Run__c</fullName>
    <label>Flow Test Run</label>
    <referenceTo>Flow_Test_Run__c</referenceTo>
    <relationshipLabel>DML Record Rows</relationshipLabel>
    <relationshipName>Test_Run_Records</relationshipName>
    <type>MasterDetail</type>
</CustomField>