salesforce-metadata/force-app/main/default/objects/Flow_Test_Run_Record__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <label>Record URL</label>
    <type>Url</type>
</CustomField>